# health-economic-impact-simulator

./: .gitignore  QUICKSTART.md  README.md  app.py  config_loader.py  pyproject.toml  requirements.txt  visualizations.py
config/: base_parameters.yml  global_parameters.py  schema.json
config/interventions/: follistatin.py  follistatin.yml  klotho.py  klotho.yml  template.yml
docs/: QUICKSTART.md  README.md  iq-impact.md  kidney-disease.md  merged-answers.md  muscle-mass-impact.md  questions.md  study-design.md  workflow.md
docs/answers/: alzheimers-delay.md  answers.md  fat-mass-impact.md  iq-impact.md  kidney-disease.md  lifepspan-impact.md  muscle-mass-impact.md
docs/references/: 2-lb-fat-reduction.md  economic-modeling.md  klotho-50-50-savings.md  muscle-fat.md
fat-mass-reduction/: README.md  analysis.py  fat-mass-reduction-model-plan.md  model.py
fat-muscle-mass-analysis/: fat-muscle-mass-analysis.ipynb  fat-muscle-mass-analysis.md
follistatin/: follistatin.md  follistatin_model.py  streamlit_app.py
references/: follistatin-analysis.md  klotho-dose-response.md  klotho-neuroinflammation.md  klotho-savings.md  klotho.md
scripts/: merge-answers.js
simple_models/: __init__.py  follistatin_simulation.py  lifespan_model.py  lifespan_report_2.5pct.md  muscle_mass_change.py  muscle_mass_model.py  muscle_mass_report.md
src/: __init__.py  app.py  generate_report.py  generate_reports.py
src/heis/: __init__.py
tests/: conftest.py  test_fat_mass_model.py  test_impact_reports.py
v3/: instructions.md  medicare_impact_model.py  medicare_impact_report.md
(+64 files in other folders)
